Rendered and updated website

--- a/project.qmd
+++ b/project.qmd
@@ -95,6 +95,10 @@ aspect <- raster("data/raster/aspect_cat.tif")
 hillshade <- raster("data/raster/hillshade.tif")
 ```
 
+```{r}
+crs(valtellina)
+```
+
 Some Layers Required Cropping and Masking
 
 ```{r}
