--- a/gwsmodelling_new.qmd
+++ b/gwsmodelling_new.qmd
@@ -18,13 +18,11 @@ output:
 
 To develop a landslide susceptibility methodology framework, we will explore and calibrate different statistical and machine learning models. This page focuses on statistical models first.
 
-
 # 1.0 Import Packages
 
 ```{r}
-pacman::p_load(sp, sf, st, spdep, raster, spatstat, tmap, devtools,vtable,ggplot2,egg, corrplot, patchwork, ggstats, ggstatsplot, GWmodel, tidyverse, gtsummary,vtable, sjPlot, sjmisc, sjlabelled, tableHTML, olsrr, car, blorr,ISLR, klaR)
+pacman::p_load(sp, sf, st, spdep, raster, spatstat, tmap, devtools,vtable,ggplot2,egg, corrplot, patchwork, ggstats, ggstatsplot, GWmodel, tidyverse, gtsummary,vtable, sjPlot, sjmisc, sjlabelled, tableHTML, olsrr, car, blorr,ISLR, klaR, rsample)
 ```
-
 
 # 2.0 Import Data
 
@@ -33,13 +31,11 @@ valtellina <- read_sf(dsn = "data/vector", layer = "valtellina")
 train_grids_v4 <- read.csv("data/aspatial/train_grid_v4.csv")
 ```
 
-
 ```{r}
 train_grid_v4.sf <- st_as_sf(train_grids_v4,
                             coords = c("X", "Y"))
 train_grid_v4.sf <- st_set_crs(train_grid_v4.sf, 32632) 
 ```
-
 
 # 3.0 Exploratory Spatial Data Analysis (ESDA)
 
@@ -53,21 +49,8 @@ Next, we will create atrellis plot by using `ggarrange()` of [**ggpubr**](https:
 
 Before building a logistic regression model, it is important to ensure that the indepdent variables used are **not highly correlated** to each other. If these highly correlated independent variables are used in building a regression model by mistake, the quality of the model will be compromised. This phenomenon is known as **multicollinearity** in statistics.
 
-Correlation matrix is commonly used to visualise the relationships between the independent variables. In this section, the [**corrplot**](https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html) package will be used to display the correlation matrix of the independent variables in *condo_resale* data frame.
+Correlation matrix is commonly used to visualise the relationships between the independent variables. In this section, the [**corrplot**](https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html) package will be used to display the correlation matrix.
 
-```{r}
-#| fig-width: 10
-
-corrplot(cor(train_grids_v4[, 6:29]), diag = FALSE, order = "AOE",
-         col=colorRampPalette(c("#50a8b4","#e4c838","#be804f"))(10),
-         tl.pos = "td", tl.cex = 0.5,tl.col = "black", number.cex = 0.5, method = "number", type = "upper")
-
-corrplot(cor(train_grids_v4[,6:29]), diag = FALSE, order = "AOE",
-         col=colorRampPalette(c("#50a8b4","#ffffdd","#be804f"))(10),
-         tl.pos = "td", tl.cex = 0.5,tl.col = "black", number.cex = 0.5, method = "ellipse", type = "upper")
-```
-
-Matrix reorder is very important for mining the hiden structure and patter in the matrix. There are four methods in corrplot (parameter order), named "AOE", "FPC", "hclust", "alphabet". In the code chunk above, AOE order is used. It orders the variables by using the *angular order of the eigenvectors* method suggested by [Michael Friendly](https://www.datavis.ca/papers/corrgram.pdf).
 
 ### 3.1 Correlation Matrix Using ggstats
 
@@ -98,7 +81,6 @@ ggcorrmat(
   )
 ```
 
-
 # 4.0 Multiple Logistic Regression
 
 The `glm` function fits generalized linear models, a class of models that includes logistic regression. The syntax of the `glm` function is similar to that of `lm`, except that we must pass the argument `family = binomial` in order to tell R to run a logistic regression rather than some other type of generalized linear model.
@@ -108,6 +90,8 @@ The `glm` function fits generalized linear models, a class of models that includ
 Under general logistic regression, all variables are considered first.
 
 ```{r}
+set.seed(1234)
+
 landslide.lr <- glm(Landslide ~ Elevation + Slope_Angle + Aspect_North + Aspect_NorthEast + Aspect_East+Aspect_SouthEast+Aspect_South + Aspect_SouthWest +Aspect_West + Profile_Curvature +Plan_Curvature + Lithology_Metamorphic+Lithology_Sedimentary + Lithology_Plutonic+Lithology_Unconsolidated + Proximity_Settlement+Proximity_Stream+Proximity_Road+Proximity_Fault+Landuse_Vegetation+Precipitation+TWI+SPI+STI, family = "binomial", data = train_grids_v4)
 ```
 
@@ -119,6 +103,7 @@ summary(landslide.lr)
 100*with(summary(landslide.lr), 1 - deviance/null.deviance)
 confint(landslide.lr)
 ```
+
 ```{r}
 vif(landslide.lr)
 ```
@@ -133,6 +118,7 @@ blr_step_aic_both(landslide.lr)
 
 ::: callout-note
 #### Stepwise Selection Result
+
 16 explanatory variables have been selected
 :::
 
@@ -146,20 +132,336 @@ landslide.lr %>%
 
 ::: callout-note
 #### Observation
+
 In our first stepwise selection, `Slope_Angle` has the highest AIC value followed by `Profile_Curvature`.
 :::
 
-## Model Update
+### 4.1.2 Validating Logistic Regression Model 1
 
 ```{r}
-landslide.lr_modified <- glm(Landslide ~ Slope_Angle + Aspect_SouthEast + Aspect_NorthEast + Aspect_South + Aspect_East + Profile_Curvature +Plan_Curvature +Lithology_Metamorphic+Lithology_Unconsolidated+ Lithology_Sedimentary+Proximity_Stream+Landuse_Vegetation+TWI+SPI, family = "binomial", data = train_grids_v4)
+cm <- blr_confusion_matrix(landslide.lr, cutoff = 0.5)
+
+cm
 ```
 
+## 4.2 Logistic Regression Model 2
 
+Here, we recalibrate the model by updating the logistic regression with the selected variables.
 
 ```{r}
+set.seed(1234)
 
+landslide.lr2 <- glm(Landslide ~ Slope_Angle + Aspect_SouthEast + Aspect_NorthEast + Aspect_South + Aspect_East + Profile_Curvature +Plan_Curvature +Lithology_Metamorphic+Lithology_Unconsolidated+ Lithology_Sedimentary+Proximity_Stream+Landuse_Vegetation+TWI+SPI, family = "binomial", data = train_grids_v4)
 ```
 
+```{r}
+summary(landslide.lr2)
+```
+
+::: callout-note
+#### Observation
+
+Model is still overfitting and AIC is very high.
+:::
+
+### 4.2.1 Validating Logistic Regression Model 2
+
+```{r}
+cm2 <- blr_confusion_matrix(landslide.lr2, cutoff = 0.5)
+
+cm2
+```
+
+### 4.2.2 Comparing LR Models 1 & 2
+
+The two models thus far yield similar results with small changes in accuracy, sensitivity and specificity despite a reduced number of variables from the first to the second model.
+
+<insert comparison photo here>
+
+### 4.2.3 Weight of Evidence & Information Value
+
+Weight of Evidence (WoE) is a variable transformation technique meant for independent variables according to Information Theory. WoE measures **how good** each grouped attribute or bin of a feature can predict the target variable.
+
+WoE is formulated as:
+
+$$
+W~i^+ = ln \frac{P\{E~i/I\}}{P\{E~i/\overline{I}\}}
+$$
+
+$$
+W~i^- = ln \frac{P\{\overline{E}~i/I\}}{P\{\overline{E}~-i/\overline{I}\}}
+$$
+
+$$
+W~i = W~i^+ + W~i^-
+$$
+
+Information value (IV) explains the predictive power of the entirety of the feature.
+
+<insert formula later>
+
+Here is the IV for all the predictors.
+
+```{r}
+library("Information")
+
+IV <- create_infotables(data=train_grids_v4[, 5:29],
+                        valid=train_grids_v4[, 5:29],
+                        y="Landslide")
+kable(IV$Summary[,1:2], row.names=FALSE)
+```
+
+::: callout-note
+#### Observation
+
+`Slope_Angle` indeed has the most predictive power compared to other variables.
+:::
+
+`Slope_Angle` has to be further investigated to understand why it has the greatest predictive power.
+
+### 4.2.4 Slope Distribution
+
+Our data points are located in various places with varying slope angles. Since our initial IV analysis flags out its influence over our model results, the slope distribution can be first viewed with a histogram.
+
+Distribution of Landslide Samples
+
+```{r}
+ls_data <- train_grids_v4[train_grids_v4$Landslide==1,]
+
+ggplot(data=ls_data, aes(x= `Slope_Angle`)) +
+  geom_histogram(bins=100, color="black", fill="#e9531e") +
+  labs(title="Distribution of slope values in landslide samples") + 
+  geom_vline(xintercept = 20, color = "red")
+```
+
+Distribution of Non-Landslide Samples
+
+```{r}
+non_ls_data <- train_grids_v4[train_grids_v4$Landslide==0,]
+
+ggplot(data=non_ls_data, aes(x= `Slope_Angle`)) +
+  geom_histogram(bins=100, color="black", fill="#e9531e") +
+  labs(title="Distribution of slope values in non-landslide samples") + 
+  geom_vline(xintercept = 20, color = "red")
+```
+
+::: callout-insight
+#### Quasi-separation Present
+
+The majority of landslide samples have slope angles larger than 20°. In similar contrast, the majority of non-landslide samples have slope angles less than 20°.
+
+As such, the model currently predicts any instances with a slope angle **greater than 20°** to be a landslide.
+:::
+
+## 4.3 Logistic Regression Model 3
+
+### 4.3.1 Stratified Slope Sampling
+
+To address the data bias with the evidence of quasi-separation, we use a 15° cut-off based on the first quantile result and slope (%) reference from the Barcelona Field Studies Centre.
+
+```{r}
+slope_angle <- train_grids_v4$Slope_Angle
+
+quantile(slope_angle, probs = seq(0, 1, 0.25))
+```
+
+[![Standard Slope Descriptors (Source: Barcelona Field Studies Centre)](images/bfc_slope_descriptors.png)](https://geographyfieldwork.com/SlopeSteepnessIndex.htm)
+
+Distribution of Landslide Samples
+
+```{r}
+ls_data_15 <- train_grids_v4[train_grids_v4$Landslide==1 & train_grids_v4$Slope_Angle <= 15,]
+
+ggplot(data=ls_data_15, aes(x= `Slope_Angle`)) +
+  geom_histogram(bins=40, color="black", fill="#e9531e") +
+  labs(title="Distribution of slope values in landslide samples (15° slope cut-off)")
+```
+
+Distribution of Non-Landslide Samples
+
+```{r}
+non_ls_data_15 <- train_grids_v4[train_grids_v4$Landslide==0 & train_grids_v4$Slope_Angle <= 15,]
+
+ggplot(data=non_ls_data_15, aes(x= `Slope_Angle`)) +
+  geom_histogram(bins=40, color="black", fill="#e9531e") +
+  labs(title="Distribution of slope values in non-landslide samples (15° slope cut-off)")
+```
+
+::: callout-note
+### Observation
+
+Although the distribution for this stratified non-landslide sample is left-skewed, the data skewness has been reduced significantly.
+:::
+
+We then perform the logistic regression model with the stratified sample.
+
+```{r}
+#| echo: false
+set.seed(1234)
+
+# data_15 <- train_grids_v4[train_grids_v4$Slope_Angle <= 15,]
+
+data_15 <- read_rds("data/rds/sample_Q6.rds")
+```
+
+```{r}
+landslide.lr3 <- glm(Landslide ~ Elevation + Slope_Angle + Aspect_North + Aspect_NorthEast + Aspect_East+Aspect_SouthEast+Aspect_South + Aspect_SouthWest +Aspect_West + Profile_Curvature +Plan_Curvature + Lithology_Metamorphic+Lithology_Sedimentary + Lithology_Plutonic+Lithology_Unconsolidated + Proximity_Settlement+Proximity_Stream+Proximity_Road+Proximity_Fault+Landuse_Vegetation+Precipitation+TWI+SPI+STI, family = "binomial", data = data_15)
+```
+
+### 4.3.2 Validating Logistic Regression Model 3
+
+```{r}
+summary(landslide.lr3)
+```
+
+```{r}
+cm3 <- blr_confusion_matrix(landslide.lr3, cutoff = 0.5)
+```
+
+```{r}
+#| echo: false
+data.frame(
+  "Metric" = c("Accuracy", "Sensitivity", "Specificity"),
+  "LR 1" = c(cm$accuracy, cm$sensitivity, cm$accuracy),
+  "LR 2" = c(cm2$accuracy, cm2$sensitivity, cm2$accuracy),
+  "LR 3" = c(cm3$accuracy, cm3$sensitivity, cm3$accuracy)
+)
+```
+
+::: callout-note
+### Observation
+
+LR 3 has the best AIC at the expense of having the lowest accuracy and sensitivity rates so far. As such, the overall performance was compromised after conducting stratified sampling.
+:::
+
+### 4.3.3 Spatial Weights
+
+Variables are more often than not influenced by geographic factors and to name a few, topography, lithology, and slope gradient.
+
+## 4.4 Geographically Weighted Logistic Regression Model 1
+
+Imposing a Geographically Weighted Logistic Regression (GWLR) Model aims to improve the model performance and more importantly, detect any spatial relationship between explanatory variables and the target variable.
+
+Our above LR model will be calibrated into GWLR by incorporating spatial weight-matrix, weighting function and bandwidth parameters.
+
+### 4.4.1 Data Sampling
+
+There is a limit to the number of observations the GWModel can take. Hence only 20% of the landslide data is taken into account.
+
+```{r}
+ls_data_sf <- st_as_sf(data_15, coords = c("X", "Y"))
+set.seed(1243)
+ls_split <- ls_data_sf %>%
+  initial_split(prop = .2, 
+                strata = Landslide)
+
+training_data_sf <- training(ls_split)
+testing_data_sf  <- testing(ls_split)
+
+training_data_sp <- as_Spatial(training_data_sf)
+```
+
+### 4.4.2 Calculating Distance Matrix
+
+```{r}
+distMAT <- gw.dist(dp.locat=
+                     coordinates(training_data_sp))
+```
+
+### 4.4.3 Computing Adaptive Bandwidth
+
+```{r}
+#| eval: false
+bw.adaptive <- bw.ggwr(formula = 
+                         Landslide ~ Slope_Angle, 
+                       family = "binomial", 
+                       data = training_data_sp, 
+                       approach="CV", 
+                       kernel="gaussian", 
+                       adaptive= TRUE, 
+                       longlat=FALSE, 
+                       p=2,
+                       theta=0,
+                       dMat=distMAT)
+```
+
+::: callout-note
+### Note
+
+The above step is computationally intensive. The resulting adaptive bandwidth value is 20.
+:::
+
+The input variables for the geographically weighted logistic regression model would be the selected independent variables for the formula, the training data in SpatialPointDataFrame object, the adaptive bandwidth value 20, where kernel is set to Gaussian and family is set as binomial due to the binary nature of the data.
+
+```{r}
+#| eval: false
+gwlr <- ggwr.basic(Landslide ~ Aspect_North + 
+                     Aspect_SouthEast + Profile_Curvature + 
+                     Plan_Curvature + Slope_Angle + 
+                     Lithology_Sedimentary + Lithology_Plutonic +
+                     Lithology_Unconsolidated + Proximity_Stream +
+                     Landuse_Vegetation + Precipitation, 
+                   data = training_data_sp, 
+                   bw = 20, 
+                   family = "binomial", 
+                   kernel = "gaussian", 
+                   adaptive = TRUE, 
+                   cv = T, 
+                   tol = 1e-05, 
+                   maxiter = 20, 
+                   p = 2, 
+                   theta = 0, 
+                   longlat = FALSE, 
+                   dMat = distMAT)
+```
+
+```{r}
+#| eval: false
+gwlr
+```
+
+![](images/gwmodel.png)
+
+![](images/glr.jpg)
+
+![](images/gwr.jpg)
+
+::: callout-tip
+### Observation
+
+-   Adjusted R-squared and AIC perform better with GWR
+
+-   Significant improvements from using global LR to local GWR
+:::
 
 
+### 4.4.5 Correlation Matrix Using ggstats
+
+<tbc>
+```{r}
+#| eval: false
+#| fig-width: 10
+
+set.seed(123)
+## producing the correlation matrix
+ggcorrmat(
+  data = train_grids_v4[, 6:29],  
+          matrix.type = "upper",
+  type = "parametric",
+  tr = 0.2,
+  partial = FALSE,
+  k = 2L,
+  sig.level = 0.05,
+  conf.level = 0.95,
+  bf.prior = 0.707,
+  ggcorrplot.args = list(
+     tl.cex = 10,
+     pch.cex = 5,
+     lab_size = 3
+  )) + ## modification outside `{ggstatsplot}` using `{ggplot2}` functions
+  ggplot2::theme(
+    axis.text.x = ggplot2::element_text(
+      margin = ggplot2::margin(t = 0.15, r = 0.15, b = 0.15, l = 0.15, unit = "cm")
+    )
+  )
+```
